# jazz2

./: TODO.md  pnpm-lock.yaml
.changeset/: better-walls-call.md  chat-react-auto-join-race.md  cli-prefixed-env-vars.md  cli-preserve-column-defaults.md  dev-telemetry-drain.md  fix-provenance-magic-timestamps.md  fix-vite-plugin-ssr-napi-external.md  inline-jazz-tools-sources.md  next-schema-reload.md  offline-cloud-dev-startup.md  permission-preflight-framework-helpers.md  pre.json  query-settlement-fanout.md  scaffold-test-coverage-all-starters.md  silly-camels-rule.md  steady-tides-tick.md  svelte-query-subscription-getter.md  transaction-rollback.md  worker-absorb-rust.md
.codex/environments/: environment.toml
crates/jazz-napi/: CHANGELOG.md  Cargo.toml  index.d.ts  index.js  package.json
crates/jazz-napi/src/: lib.rs
crates/jazz-rn/: CHANGELOG.md  package.json
crates/jazz-rn/cpp/: jazz_rn.cpp  jazz_rn.hpp
crates/jazz-rn/rust/src/: lib.rs
crates/jazz-tools/: Cargo.toml
crates/jazz-tools/benches/: observer_write_path.rs
crates/jazz-tools/examples/: realistic_bench.rs
crates/jazz-tools/src/: batch_fate.rs  client.rs  lib.rs  main.rs  otel.rs  peer_stream_pump.rs  runtime_core.rs  runtime_tokio.rs  transport_manager.rs  transport_protocol.rs  worker_frame.rs
crates/jazz-tools/src/query_manager/: bindings.rs  manager.rs  manager_tests.rs  rebac_tests.rs  server_queries.rs  writes.rs
crates/jazz-tools/src/query_manager/graph/: execute.rs
crates/jazz-tools/src/query_manager/manager_tests/: deletes.rs  policies.rs
crates/jazz-tools/src/query_manager/rebac_tests/: inherited_policies.rs
crates/jazz-tools/src/query_manager/types/: policy.rs
crates/jazz-tools/src/row_histories/: mod.rs  mutations.rs
crates/jazz-tools/src/runtime_core/: mod.rs  sync.rs  tests.rs  ticks.rs  writes.rs
crates/jazz-tools/src/runtime_core/tests/: install_transport_tests.rs  query_subscription.rs  schema_catalogue.rs
crates/jazz-tools/src/runtime_core/tests/write_batch/: direct.rs  persisted.rs  storage_flush.rs
crates/jazz-tools/src/schema_manager/: integration_tests.rs  manager.rs
crates/jazz-tools/src/schema_manager/integration_tests/tests/: writes.rs
crates/jazz-tools/src/server/: mod.rs
crates/jazz-tools/src/server/routes/: mod.rs  websocket.rs
crates/jazz-tools/src/storage/: conformance.rs  memory.rs  mod.rs  storage_trait.rs
crates/jazz-tools/src/sync_manager/: forwarding.rs  inbox.rs  mod.rs  sync_logic.rs  tests.rs
crates/jazz-tools/src/sync_manager/tests/: row_batch_state.rs  settlements.rs
crates/jazz-tools/src/ws_stream/: native.rs
crates/jazz-wasm/: CHANGELOG.md  Cargo.toml  package.json
crates/jazz-wasm/src/: lib.rs  post_message_stream.rs  runtime.rs  worker_client.rs  worker_host.rs  ws_stream.rs
crates/wasm-tracing/: Cargo.toml
crates/wasm-tracing/src/: layer.rs  recorder.rs
dev/benchmarks/realistic/: ci_skip_set.json
docs/content/docs/: meta.json
docs/content/docs/auth/: local-first-auth.mdx  permissions.mdx
docs/content/docs/getting-started/: client-setup.mdx
docs/content/docs/recipes/access-control/: group-permissions.mdx  meta.json  shared-access.mdx  user-owned-data.mdx
docs/content/docs/recipes/auth/: auth-provider-integration.mdx  better-auth-adapter.mdx  meta.json
docs/content/docs/recipes/data-patterns/: meta.json  nested-data.mdx  real-time-collaborative-list.mdx
docs/content/docs/writing/: writing-data.mdx
examples/auth-betterauth-chat/: README.md  next.config.ts  permissions.ts
examples/auth-betterauth-chat/app/: page.tsx
examples/auth-betterauth-chat/src/: ChatPanel.tsx
examples/auth-simple-chat/: README.md
examples/auth-simple-chat/e2e/: chat-auth.spec.ts
examples/auth-simple-chat/src/: App.tsx  ChatPanel.tsx  chat-permissions.ts
examples/auth-workos-chat/: README.md  vite.config.ts
examples/auth-workos-chat/src/: App.tsx
examples/chat-react/: package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
examples/chat-react/e2e/: global-setup.ts  helpers.ts  invite-auto-join.spec.ts
examples/chat-react/src/components/chat-view/: ChatView.tsx
examples/chat-react/tests/permissions/: permissions.test.ts
examples/cloudflare-worker-runtime-ts/src/: worker.ts
examples/docs/todo-client-localfirst-react/src/: group-permissions-snippets.tsx
examples/docs/todo-server-rs/tests/: integration.rs
examples/docs/todo-server-ts/tests/: integration.test.ts
examples/letter-canvas-react/: README.md  index.html  package.json  permissions.ts  schema.ts  tsconfig.json  vite.config.ts  vitest.config.browser.ts
examples/letter-canvas-react/src/: App.tsx  board-scene.tsx  constants.ts  cursor-gate.ts  cursor-marker.tsx  cursor-visibility.ts  format.ts  geometry.ts  letter-drawer.tsx  main.tsx  motion.ts  pending-draft.ts  rate-limit.ts  styles.css  url-state.ts  use-forward-arrow-keys-to-parent.ts
examples/letter-canvas-react/tests/: cursor-visibility.test.ts  geometry.test.ts  pending-draft.test.ts  styles.test.ts
examples/letter-canvas-react/tests/browser/: cursor-gate.test.tsx  global-setup.ts  letter-canvas.test.tsx  motion.test.tsx  rate-limit.test.tsx  test-constants.ts
examples/moon-lander-react/: vite.config.ts
examples/nextjs-csr-ssr/: .env  permissions.ts
examples/nextjs-csr-ssr/app/: ClientTodo.tsx
examples/nextjs-csr-ssr/lib/: jazz-server.ts
examples/todo-client-localfirst-svelte/: vite.config.ts
examples/todo-server-rs/tests/: integration.rs
examples/wequencer/: vite.config.ts
examples/world-tour/: README.md  package.json  vite.config.ts
examples/world-tour/src/: App.vue  constants.ts  main.ts
specs/: TODO.md
specs/a_mvp/: test_catalogue_and_strategy.md
specs/status-quo/: batches.md  ts_client.md
specs/todo/c_later/: crate_structure_cleanup.md
specs/todo/issues/: unsealed-pending-rows-cleanup.md
starters/sveltekit-betterauth/: AGENTS.md
stress-tests/todo-react/src/: App.tsx  vite-env.d.ts
todo/ideas/1_mvp/: authoritative-tier-permission-checks.md  deep-tri-state-policy-unknown.md
(+1 files in other folders)
