[package]
name = "jazz-tools"
version = "2.0.0-alpha.0"
edition = "2024"
description = "Jazz local-first relational database core, runtime, client, and CLI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/garden-co/jazz2"

[lib]
name = "jazz_tools"
path = "src/lib.rs"

[[bin]]
name = "jazz-tools"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
rocksdb = ["dep:rocksdb"]
sqlite = ["dep:rusqlite"]
runtime-tokio = ["dep:tokio"]
transport = []
transport-websocket = ["transport", "runtime-tokio", "dep:tokio-tungstenite"]
client = ["runtime-tokio", "transport-websocket", "dep:thiserror", "dep:tokio"]
server = [
  "transport-websocket",
  "dep:tokio",
  "dep:axum",
  "dep:tracing-subscriber",
  "dep:tower-http",
  "dep:async-stream",
  "dep:jsonwebtoken",
  "dep:bytes",
  "dep:reqwest",
]
cli = ["server", "rocksdb", "dep:clap"]
test-utils = ["server", "client", "sqlite"]
test = ["test-utils", "cli"]
otel = [
  "cli",
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-stdout",
  "dep:tracing-opentelemetry",
]

[dependencies]
opfs-btree = { path = "../opfs-btree", version = "0.1.0" }
bincode = "1"
futures = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
blake3 = "1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
postcard = { version = "1", features = ["alloc"] }
jsonschema = { version = "0.42", default-features = false }
internment = "0.8"
smallvec = { version = "1.11", features = ["serde"] }
smolset = "1.3"
web-time = "1.1"
small-map = "0.1"
bitvec = "1.0"
ahash = "0.8"
sha2 = "0.10"

tokio = { version = "1", features = ["full"], optional = true }
rocksdb = { version = "0.24", default-features = false, features = ["lz4", "zstd"], optional = true }
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

axum = { version = "0.7", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"], optional = true }
bytes = { version = "1", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
async-stream = { version = "0.3", optional = true }
jsonwebtoken = { version = "9", optional = true }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }

reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
], optional = true }
thiserror = { version = "1", optional = true }

opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
opentelemetry-stdout = { version = "0.31", features = ["trace"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
criterion = "0.5"
insta = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
bytes = "1"
tempfile = "3"
jsonwebtoken = "9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["test-util", "full"] }
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "realistic_phase1"
harness = false

[[bench]]
name = "observer_write_path"
harness = false

[[example]]
name = "realistic_bench"
required-features = ["client"]

[[test]]
name = "rocksdb_storage_integration"
required-features = ["rocksdb", "test"]

[[test]]
name = "sqlite_storage_integration"
required-features = ["sqlite", "test"]
