[package]
name = "jazz-wasm-tracing"
version = "3.0.0-alpha.0"
authors = ["Daniel Gallups <dsgallups@protonmail.com>"]
edition = "2021"
categories = ["development-tools::debugging", "development-tools::profiling", "no-std", "wasm"]
documentation = "https://docs.rs/wasm_tracing"
description = "Tracing subscriber for WebAssembly. Maintained fork of tracing-wasm."
keywords = ["logging", "metrics", "wasm", "spans", "tracing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dsgallups/wasm-tracing"

[lib]
name = "wasm_tracing"


[features]
mark-with-rayon-thread-index = ["rayon"]

[dependencies]
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tracing = { version = "0.1", features = ["attributes"], default-features = false }
tracing-log = { version = "0.2", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", features = ["registry"], default-features = false }
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.0"
console_error_panic_hook = "0.1.7"
serde_json = "1"
tracing = { version = "0.1", features = ["std"], default-features = false }
